Added wax pears and vinanas, also added the admiration to nbt data